--- a/index.html
+++ b/index.html
@@ -4,16 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hasan.ee</title>
+    <link rel="stylesheet" href="./css/style.css"/>
 </head>
 <body>
     <header>
         <a href="#" class="logo">Hasan E.</a>
         <nav>
             <a href="#">About</a>
-            <a href="#">Projects</a>
+            <a href="#">Projects & Achievements</a>
             <a href="#">Blog</a>
             <a href="#">Contact</a>
         </nav>
     </header>
+    <section class="hero">
+        <div class="hero-container">
+            <div class="column-left">
+                <h1>Hasan Erdogan</h1>
+                <p>Lorem ipsum.</p>
+                <button>Download CV</button>
+            </div>
+            <div class="column-right">
+                <img src="./img/image-01.jpg" alt="Illustration" class="hero-image"/>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
