--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <button>Download CV</button>
             </div>
             <div class="column-right">
-                <img src="./img/image-01.jpg" alt="Illustration" class="hero-image"/>
+                <img src="./img/image-01.jpeg" alt="Illustration" class="hero-image"/>
             </div>
         </div>
     </section>
