--- a/index.html
+++ b/index.html
@@ -7,25 +7,19 @@
     <link rel="stylesheet" href="./css/style.css"/>
 </head>
 <body>
-    <header>
-        <a href="#" class="logo">Hasan E.</a>
-        <nav>
-            <a href="#">About</a>
-            <a href="#">Projects & Achievements</a>
-            <a href="#">Blog</a>
-            <a href="#">Contact</a>
-        </nav>
-    </header>
     <section class="hero">
         <div class="hero-container">
-            <div class="column-left">
-                <h1>Hasan Erdogan</h1>
-                <p>Lorem ipsum.</p>
-                <button>Download CV</button>
-            </div>
-            <div class="column-right">
-                <img src="./img/image-01.jpeg" alt="Illustration" class="hero-image"/>
-            </div>
+            
+            <h1>Hasan Erdogan</h1>
+            <p>A Dutch-Turkish curious mind based in Belgium.</p>
+            <p>Check out my
+            <a href="/work" class="links">work</a>
+            , 
+            <a href="/writings" class="links">writings</a>
+             and 
+            <button>get in touch</button>
+            .</p>
+            
         </div>
     </section>
 </body>
