--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <h1>Hasan Erdogan</h1>
             <p>A Dutch-Turkish curious mind based in Belgium.</p>
             <p>Check out my
-            <a href="/work" class="links">work</a>
+            <a href="./work.html" class="link-a highlighted">work</a>
             , 
-            <a href="/writings" class="links">writings</a>
+            <a href="./writings.html" class="link-a">writings</a>
              and 
-            <button>get in touch</button>
+            <button class="link-button">get in touch</button>
             .</p>
             
         </div>
