--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         <div class="hero-container">
             
             <h1>Hasan Erdogan</h1>
+            <br>
             <p>A Dutch-Turkish curious mind based in Belgium.</p>
             <p>Check out my
             <a href="./work.html" class="link-a highlighted">work</a>
             , 
             <a href="./writings.html" class="link-a">writings</a>
              and 
-            <button class="link-button">get in touch</button>
-            .</p>
+            <button class="link-button">get in touch</button>.</p>
             
         </div>
     </section>
