--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             
             <h1>Hasan Erdogan</h1>
             <br>
-            <p>A Dutch-Turkish curious mind based in Belgium.</p>
+            <p>A Dutch-Turkish curious mind based in Delft.</p>
             <p>Check out my
             <a href="./work.html" class="link-a highlighted">work</a>
             , 
