--- a/achievements.html
+++ b/achievements.html
@@ -1,1 +1,6 @@
 Under construction...
+- 1st place, flemish programming contest 2024 (teams of 3)
+- 2nd place, international mathematics tournament ku leuven 2024 (teams of 5)
+- best speaker, namur model united nations namun2025
+- participant western european olmpyiad in informatics (italy, 2025)
+- ..
