--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hasan.ee</title>
     <link rel="stylesheet" href="./css/style.css"/>
 </head>
@@ -11,7 +11,6 @@
         <div class="hero-container">
             
             <h1>Hasan Erdogan</h1>
-            <br>
             <p>A Dutch-Turkish curious mind based in Delft.</p>
             <p>Check out my
             <a href="./work.html" class="link-a highlighted">work</a>
