--- a/index.html
+++ b/index.html
@@ -11,15 +11,43 @@
         <div class="hero-container">
             
             <h1>Hasan Erdogan</h1>
+            <br>
             <p>A Dutch-Turkish curious mind based in Delft.</p>
             <p>Check out my
-            <a href="./work.html" class="link-a highlighted">work</a>
-            , 
-            <a href="./writings.html" class="link-a">writings</a>
-             and 
-            <button class="link-button">get in touch</button>.</p>
+                <a href="./work.html" class="link-a highlighted">work</a>
+                , 
+                <a href="./writings.html" class="link-a">writings</a>
+                and 
+                <button class="link-button" id="toggle">get in touch</button>.
+            </p>
+            <div class="icons" id="icons">
+                <a href="mailto:me@hasan.ee" target="_blank">
+                    <img src="./icons/mail.png" alt="Mail" class="icon">
+                </a>
+
+                <a href="https://linkedin.com/in/hasan-e" target="_blank">
+                    <img src="./icons/in.png" alt="LinkedIn" class="icon">
+                </a>
+
+                <a href="https://github.com/hasan-ee" target="_blank">
+                    <img src="./icons/github.png" alt="GitHub" class="icon">
+                </a>
+
+                <a href="https://x.com" target="_blank">
+                    <img src="./icons/x.png" alt="X" class="icon">
+                </a>
+            </div>
+
             
         </div>
     </section>
+    <script>
+        const toggleBtn = document.getElementById("toggle");
+        const icons = document.getElementById("icons");
+
+        toggleBtn.addEventListener("click", () => {
+            icons.classList.toggle("show");
+        });
+    </script>
 </body>
 </html>
